<resources>
    <string name="app_name">Netflux</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">Tv Show</string>
    <string name="tv_judul">Title</string>
    <string name="tv_ph">PH</string>
    <string name="tv_tanggal">Date</string>
    <string name="tv_overview">Overview</string>
    <string name="img_cover">Cover</string>
    <string name="img_rating">Rate</string>
    <string name="tv_rating">Rate</string>
    <string name="change_language_settings">Change language</string>
    <string name="img_time">time</string>
    <string name="tv_waktu">time</string>
    <string name="id_bahasa">en-US</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv">Favorite Movie</string>
    <string name="submit">Add To Favourite</string>
    <string name="delete">Delete</string>
    <string name="dialog_messgae">Are you sure you want to delete this item?</string>
    <string name="hapus_message">Delete</string>
</resources>